--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-ejs-layouts": "^2.2.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.15.6",
+    "flash": "^1.1.0",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc2",
     "morgan": "^1.8.1"
   },
