--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "method-override": "^2.3.10",
+    "moment": "^2.20.1",
     "mongoose": "^5.0.0-rc2",
     "morgan": "^1.8.1"
   },
